<resources>
    <string name="app_name">RideSharerAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="newparticipant_hint">Who?</string>
    <string name="newparticipant_button">Add Participant</string>
    <string name="newusername_hint">Username</string>
    <string name="newpassword_hint">Choose Password</string>
    <string name="newFirstName_hint">Enter First Name</string>
    <string name="newLastName_hint">Enter Last Name</string>
    <string name="newEmail_hint">Enter Email</string>
    <string name="newPhoneNumber_hint">Enter Phone Number</string>
    <string name="title_activity_second_activitity">SecondaryActivity</string>
    <string name="createPassenger_button">Create Passenger</string>
</resources>
